--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,9 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install -r requirements.txt
-    - name: Run tests
-      run: |
-        pytest
+    # - name: Run tests
+    #   run: |
+    #     pytest
     - name: Update README
       env:
         API_TOKEN: ${{ secrets.README_BOT_TOKEN }}
