--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.8
     - uses: actions/cache@v2
       name: Configure pip caching
       with:
@@ -27,9 +27,10 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install -r requirements.txt
-    # - name: Run tests
-    #   run: |
-    #     pytest
+        python -m pip install --pre gql[all]
+    - name: Run tests
+      run: |
+        pytest
     - name: Update README
       env:
         API_TOKEN: ${{ secrets.README_BOT_TOKEN }}
